@@ -9,3 +9,8 @@ usr/lib/grass64/etc/v.digit
 usr/lib/grass64/etc/wxpython
 usr/lib/grass64/bin/v.digit
 usr/lib/grass64/bin/xganim
+usr/share/grass64/bwidget
+usr/share/grass64/etc/dm
+usr/share/grass64/etc/gm
+usr/share/grass64/etc/gui
+usr/share/grass64/etc/nviz2.2
