@@ -1,0 +1,43 @@
+usr/share/grass@VERSION@/bwidget/images usr/lib/grass@VERSION@/bwidget/images
+usr/share/grass@VERSION@/etc/dm/barscale.gif usr/lib/grass@VERSION@/etc/dm/barscale.gif
+usr/share/grass@VERSION@/etc/dm/chart.gif usr/lib/grass@VERSION@/etc/dm/chart.gif
+usr/share/grass@VERSION@/etc/dm/cmd.gif usr/lib/grass@VERSION@/etc/dm/cmd.gif
+usr/share/grass@VERSION@/etc/dm/columns.gif usr/lib/grass@VERSION@/etc/dm/columns.gif
+usr/share/grass@VERSION@/etc/dm/copy.gif usr/lib/grass@VERSION@/etc/dm/copy.gif
+usr/share/grass@VERSION@/etc/dm/cut.gif usr/lib/grass@VERSION@/etc/dm/cut.gif
+usr/share/grass@VERSION@/etc/dm/dig.gif usr/lib/grass@VERSION@/etc/dm/dig.gif
+usr/share/grass@VERSION@/etc/dm/display.all.gif usr/lib/grass@VERSION@/etc/dm/display.all.gif
+usr/share/grass@VERSION@/etc/dm/display.gif usr/lib/grass@VERSION@/etc/dm/display.gif
+usr/share/grass@VERSION@/etc/dm/display.region.gif usr/lib/grass@VERSION@/etc/dm/display.region.gif
+usr/share/grass@VERSION@/etc/dm/dtext.gif usr/lib/grass@VERSION@/etc/dm/dtext.gif
+usr/share/grass@VERSION@/etc/dm/erase.gif usr/lib/grass@VERSION@/etc/dm/erase.gif
+usr/share/grass@VERSION@/etc/dm/fly.gif usr/lib/grass@VERSION@/etc/dm/fly.gif
+usr/share/grass@VERSION@/etc/dm/frames.gif usr/lib/grass@VERSION@/etc/dm/frames.gif
+usr/share/grass@VERSION@/etc/dm/fttext.gif usr/lib/grass@VERSION@/etc/dm/fttext.gif
+usr/share/grass@VERSION@/etc/dm/grass.gif usr/lib/grass@VERSION@/etc/dm/grass.gif
+usr/share/grass@VERSION@/etc/dm/grid.gif usr/lib/grass@VERSION@/etc/dm/grid.gif
+usr/share/grass@VERSION@/etc/dm/group.gif usr/lib/grass@VERSION@/etc/dm/group.gif
+usr/share/grass@VERSION@/etc/dm/intro.gif usr/lib/grass@VERSION@/etc/dm/intro.gif
+usr/share/grass@VERSION@/etc/dm/labels.gif usr/lib/grass@VERSION@/etc/dm/labels.gif
+usr/share/grass@VERSION@/etc/dm/legend.gif usr/lib/grass@VERSION@/etc/dm/legend.gif
+usr/share/grass@VERSION@/etc/dm/measure.gif usr/lib/grass@VERSION@/etc/dm/measure.gif
+usr/share/grass@VERSION@/etc/dm/new.gif usr/lib/grass@VERSION@/etc/dm/new.gif
+usr/share/grass@VERSION@/etc/dm/nviz.gif usr/lib/grass@VERSION@/etc/dm/nviz.gif
+usr/share/grass@VERSION@/etc/dm/open.gif usr/lib/grass@VERSION@/etc/dm/open.gif
+usr/share/grass@VERSION@/etc/dm/pan.gif usr/lib/grass@VERSION@/etc/dm/pan.gif
+usr/share/grass@VERSION@/etc/dm/position.gif usr/lib/grass@VERSION@/etc/dm/position.gif
+usr/share/grass@VERSION@/etc/dm/print.gif usr/lib/grass@VERSION@/etc/dm/print.gif
+usr/share/grass@VERSION@/etc/dm/query.gif usr/lib/grass@VERSION@/etc/dm/query.gif
+usr/share/grass@VERSION@/etc/dm/raster.gif usr/lib/grass@VERSION@/etc/dm/raster.gif
+usr/share/grass@VERSION@/etc/dm/rgbhis.gif usr/lib/grass@VERSION@/etc/dm/rgbhis.gif
+usr/share/grass@VERSION@/etc/dm/save.gif usr/lib/grass@VERSION@/etc/dm/save.gif
+usr/share/grass@VERSION@/etc/dm/thematic.gif usr/lib/grass@VERSION@/etc/dm/thematic.gif
+usr/share/grass@VERSION@/etc/dm/vector.gif usr/lib/grass@VERSION@/etc/dm/vector.gif
+usr/share/grass@VERSION@/etc/dm/xganim.gif usr/lib/grass@VERSION@/etc/dm/xganim.gif
+usr/share/grass@VERSION@/etc/dm/zoom.back.gif usr/lib/grass@VERSION@/etc/dm/zoom.back.gif
+usr/share/grass@VERSION@/etc/dm/zoom.gif usr/lib/grass@VERSION@/etc/dm/zoom.gif
+usr/share/grass@VERSION@/etc/gm/intro.gif usr/lib/grass@VERSION@/etc/gm/intro.gif
+usr/share/grass@VERSION@/etc/gui/icons usr/lib/grass@VERSION@/etc/gui/icons
+usr/share/grass@VERSION@/etc/gui/images usr/lib/grass@VERSION@/etc/gui/images
+usr/share/grass@VERSION@/etc/nviz2.2/bitmaps/flythrough usr/lib/grass@VERSION@/etc/nviz2.2/bitmaps/flythrough
+usr/share/grass@VERSION@/etc/nviz2.2/bitmaps/trash.gif usr/lib/grass@VERSION@/etc/nviz2.2/bitmaps/trash.gif
